--- a/LabController/proxy/setup.py.in
+++ b/LabController/proxy/setup.py.in
@@ -31,6 +31,7 @@ setup(
             'beaker-import = bkr.labcontroller.distro_import:main',
             'beaker-provision = bkr.labcontroller.provision:main',
             'beaker-pxemenu = bkr.labcontroller.pxemenu:main',
+            'beaker-expire-distros = bkr.labcontroller.expire_distros:main',
         ),
     }
 )
