disable Visit and VisitIdentity table creation on startup
Needs a corresponding patch in TurboGears. Look for at least
TurboGears-1.1.3-2.el6eng.2.

Bug: 852557
Change-Id: Id2707dbdd484676cc4e0df81a5559b876e2bce31

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -143,6 +143,13 @@ sqlalchemy.convert_unicode=True
 
 identity.saprovider.encryption_algorithm='sha1'
 
+# We don't need the Visit or VisitIdentity extensions to create their tables on 
+# startup, it only causes problems:
+# https://bugzilla.redhat.com/show_bug.cgi?id=852557
+# Note that these config options are not honoured by stock TurboGears.
+visit.create_model = False
+identity.create_model = False
+
 mail.message.encoding = 'utf-8'
 mail.utf8qp.on = True
 
