ensure console logs are served as text/plain by Apache
Bug: 855974
Change-Id: I5f6e964556aa8de7375beb7a8f2ff506ddc533bc

--- a/LabController/conf.d/beaker-lab-controller.conf
+++ b/LabController/conf.d/beaker-lab-controller.conf
@@ -5,5 +5,11 @@ AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
     Options Indexes FollowSymLinks
     Order allow,deny
     Allow from all
+    <Files "console.log">
+        ForceType text/plain
+    </Files>
 </Directory>
 
+<Directory "/var/consoles">
+    ForceType text/plain
+</Directory>
