--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -17,6 +17,12 @@ Alias /rpms /var/www/beaker/rpms
 Alias /repos /var/www/beaker/repos
 Alias /harness /var/www/beaker/harness
 
+<Directory "/var/www/beaker/logs">
+    <Files "console.log">
+        ForceType text/plain
+    </Files>
+</Directory>
+
 WSGIDaemonProcess beaker user=apache group=apache display-name=beaker maximum-requests=1000 processes=4 threads=2
 #WSGISocketPrefix run/wsgi
 WSGISocketPrefix /var/run/wsgi
