--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -13,3 +13,12 @@ AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
 <Directory "/var/consoles">
     ForceType text/plain
 </Directory>
+
+<Directory "/var/www/beaker/logs">
+    ErrorDocument 404 /.beaker-404.html
+</Directory>
+Alias /.beaker-404.html /usr/share/bkr/lab-controller/404.html
+<Directory "/usr/share/bkr/lab-controller">
+    Order allow,deny
+    Allow from all
+</Directory>
