added man page for beaker-wizard
The man page is based on the BeakerWizard wiki page version 5, from
Beaker's old Trac instance:

https://fedorahosted.org/beaker/wiki/BeakerWizard

Bug: 857342
Change-Id: I7e1f5d6689d1f990f099bc205db314f615ad71e0

--- a/Client/Makefile
+++ b/Client/Makefile
@@ -11,7 +11,7 @@ include ../py_rules.mk
 
 .PHONY: build
 build: $(_SETUP_PY)
-	env PYTHONPATH=../Common$${PYTHONPATH:+:$$PYTHONPATH} \
+	env PYTHONPATH=../Common:src:$${PYTHONPATH:+:$$PYTHONPATH} \
 	    python $(SETUP_PY) build \
 	    | tee build.out
 	@if grep -q ImportError build.out ; then \
