removed LabController/proxy subdirectory
There is no need to separate this stuff into its own subdirectory, and
the name is no longer accurate (it's not just the proxy anymore, there
is also beaker-watchdog, beaker-transfer, and beaker-provision).

Change-Id: I553db098cb230cd498f5a56bc8f278ae28615bb1

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ Common/setup.py
 Client/build
 Client/setup.py
 Client/doc/bkr-*.rst
-LabController/proxy/build
-LabController/proxy/setup.py
+LabController/build
+LabController/setup.py
 IntegrationTests/build
 IntegrationTests/setup.py
 *.diff
