--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -15,7 +15,15 @@ setup(
                   ('/etc/init.d', ['init.d/beaker-proxy',
                                    'init.d/beaker-transfer',
                                    'init.d/beaker-provision',
-                                   'init.d/beaker-watchdog'])],
+                                   'init.d/beaker-watchdog']),
+                  ('/etc/cron.hourly', ['cron.hourly/beaker_expire_distros']),
+                  ('/etc/httpd/conf.d', ['apache/beaker-lab-controller.conf']),
+                  ('/var/run/beaker-lab-controller', []),
+                  ('/var/lib/beaker', ['addDistro/addDistro.sh']),
+                  ('/var/lib/beaker/addDistro.d', glob('addDistro/addDistro.d/*')),
+                  ('/var/www/beaker', ['aux/anamon', 'aux/anamon.init']),
+                  ('/usr/share/bkr/lab-controller', ['apache/404.html']),
+                 ],
     package_data = {
         'bkr.labcontroller': [
             'default.conf',
