moved anamon to /usr/share
Anamon is not really "variable data", it's read-only package data so it
belongs in /usr/share.

Change-Id: If6989ad38d50b99529b72cf69811bfeee72d5398

--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -1,5 +1,12 @@
+Alias /beaker/anamon /usr/share/bkr/lab-controller/anamon
+Alias /beaker/anamon.init /usr/share/bkr/lab-controller/anamon.init
 AliasMatch ^/beaker(.*)?$ "/var/www/beaker$1"
 AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
+
+<Directory "/usr/share/bkr/lab-controller">
+    Order allow,deny
+    Allow from all
+</Directory>
 
 <Directory "/var/www/beaker">
     Options Indexes FollowSymLinks
@@ -18,7 +25,3 @@ AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
     ErrorDocument 404 /.beaker-404.html
 </Directory>
 Alias /.beaker-404.html /usr/share/bkr/lab-controller/404.html
-<Directory "/usr/share/bkr/lab-controller">
-    Order allow,deny
-    Allow from all
-</Directory>
