Gutting of qpid code
This is in-line with the new approach taken of only using qpid for inter
application communication. What's left should be only the code
that is needed for managing a connection to the broker and send/receiving
messages.

Change-Id: Ib32044b3a16aa681034e6c8616892743714b7eb0

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -172,22 +172,9 @@ tg.url_scheme = "http"
 #carbon.address = ('graphite.example.invalid', 2023)
 #carbon.prefix = 'beaker.'
 
-# Set to True if you wish to enable QPID support for beaker
-# Please be aware that qpid libraries will need to be installed
-# and the beaker server must be using QPID as well.
-# If Setting to true, you must also enable all the other
-# beaker.qpid__* config options.
-beaker.qpid_enabled = False
-
-# If using qpid, you can uncomment this line to enable the default services
-# that you wish to use with qpid (only used if beaker.qpid_enabled is True)
-#beaker.qpid_listen_to = ['beaker.service_queue', 'beaker.expired_watchdogs']
-
+# If utilising qpid, ensure you have the python qpid
+# modules installed
 #beaker.qpid_topic_exchange = 'amqp.topic'
-#beaker.qpid_direct_exchange = 'amqp.direct'
-
-# The queue on which the watchdog can send rpc like calls
-#beaker.qpid_service_queue = 'service-queue'
 
 # The hostname of the qpid broker
 #beaker.qpid_broker = 'localhost'
