allocate MAC addresses to guests
Even though 'Virtual' system records for guest recipes are no longer
needed, Beaker still has to allocate MAC addresses for guests. We need
to make sure MAC addresses are re-used whenever possible, otherwise
running many guest recipes in succession could exhaust the lab's DHCP
pool.

This also gives some amount of configurability for the MAC addresses
used, in case the lab DHCP server has restrictions on what MAC addresses
can be granted leases.

Bug: 655009
Change-Id: I68e5d64b0cb90b935c807638fbd7c2c7b3f704ff

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -163,6 +163,10 @@ tg.url_scheme = "http"
 #beaker.kernel_options = "ksdevice=bootif"
 #beaker.kernel_options_post = ""
 
+# When generating MAC addresses for virtual systems, Beaker will always pick 
+# the lowest free address starting from this base address.
+#beaker.base_mac_addr = "52:54:00:00:00:00"
+
 # If carbon.address is set, Beaker will send various metrics to carbon 
 # (collection daemon for Graphite) at the given address. The address must be 
 # a tuple of (hostname, port).
