yum for RHEL3 and RHEL4
Change-Id: Icd0d36a2713b4e0728873515b16dbaaa534a49dd

--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -22,8 +22,8 @@ setup(
                   ('/var/lib/beaker', ['addDistro/addDistro.sh']),
                   ('/var/lib/beaker/addDistro.d', glob('addDistro/addDistro.d/*')),
                   ('/var/www/beaker/logs', []),
-                  ('/usr/share/bkr/lab-controller', ['apache/404.html',
-                    'aux/anamon', 'aux/anamon.init']),
+                  ('/usr/share/bkr/lab-controller', ['apache/404.html'] +
+                    glob('aux/*')),
                  ],
     package_data = {
         'bkr.labcontroller': [
