--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -1,5 +1,6 @@
 Alias /beaker/anamon /usr/share/bkr/lab-controller/anamon
 Alias /beaker/anamon.init /usr/share/bkr/lab-controller/anamon.init
+AliasMatch ^/beaker/(yum.*\.rpm)$ /usr/share/bkr/lab-controller/$1
 AliasMatch ^/beaker(.*)?$ "/var/www/beaker$1"
 AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
 
