Update footer with version number and doc link
Bug: 584267
Change-Id: Ida84a0c85a3369c5908750f0a00edc4b1a161ca3

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -150,6 +150,8 @@ tg.url_scheme = "http"
 # default no message is shown.
 #beaker.reservation_policy_url = "http://example.com/reservation-policy"
 
+beaker.documentation_link = 'http://beaker-project.org/help.html'
+
 # If both of these options are set, the Piwik tracking javascript snippet will
 # be embedded in all pages, reporting statistics back to the given Piwik
 # installation.
