Move beaker.documentation_link to app.cfg from server.cfg

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -161,6 +161,7 @@ autoreload.package="bkr.server"
 # gzip_filter.mime_types = ["application/x-javascript", "text/javascript", "text/html", "text/css", "text/plain"]
 
 beaker.bz_create_link = "https://bugzilla.redhat.com/enter_bug.cgi?product=Beaker"
+beaker.documentation_link = 'http://beaker-project.org/help.html'
 
 [/logs]
 static_filter.on = True
