support for running recipes on RHEV/oVirt guests
Based on a patch by Steven Lawrance <stl@redhat.com>.

Bug: 862518
Change-Id: If46da6be23fabac11f6defa7c724e2d369eb1544

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -186,6 +186,9 @@ beaker.documentation_link = 'http://beaker-project.org/help.html'
 # Set to True if the qpid broker requires krb authentication
 #beaker.qpid_krb_auth = False
 
+# Enable oVirt integration, for running recipes on dynamically created guests
+#ovirt.enabled = False
+
 [/logs]
 static_filter.on = True
 static_filter.dir = "/var/www/beaker/logs"
