move virt manager settings from db to config file
This means we only support one (optional) RHEV-M instance, instead of
many. It makes things a lot simpler and lets us fix the issue with
leaking VMs in beakerd.virt_recipes if the db transaction rolls back.

Change-Id: I48e526f650d52c787e65b53639ce349dee644132

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -188,6 +188,9 @@ beaker.documentation_link = 'http://beaker-project.org/help.html'
 
 # Enable oVirt integration, for running recipes on dynamically created guests
 #ovirt.enabled = False
+#ovirt.api_url = 'https://manager.example.com:8443/api'
+#ovirt.username = 'admin@internal'
+#ovirt.password = ''
 
 [/logs]
 static_filter.on = True
