Specify which storage domain you want your beaker machines created on.
Without this option, having non bootable storage domains (i.e ISO domains) on your
Hypervisor can cause the following traceback during provisioning and will
abort the recipe:

  2012-11-15 17:22:51,828 beakerd ERROR Failed to provision recipeid 360
  Traceback (most recent call last):
    File "/usr/lib/python2.6/site-packages/bkr/server/tools/beakerd.py", line 525, in scheduled_recipes
      recipe.provision()
    File "/usr/lib/python2.6/site-packages/bkr/server/model.py", line 5194, in provision
      self.resource.lab_controller)
    File "/usr/lib/python2.6/site-packages/bkr/server/model.py", line 6484, in start_install
      self.api.vms.get(name).start(action=a)
    File "/usr/lib/python2.6/site-packages/ovirtsdk/infrastructure/brokers.py", line 5296, in start
      headers={"Correlation-Id":correlation_id})
    File "/usr/lib/python2.6/site-packages/ovirtsdk/infrastructure/proxy.py", line 128, in request
      last=last)
    File "/usr/lib/python2.6/site-packages/ovirtsdk/infrastructure/proxy.py", line 154, in __doRequest
      raise RequestError, response
  RequestError: ^M
  status: 400^M
  reason: Bad Request^M
  detail: Cannot run VM without at least one bootable disk

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -189,6 +189,7 @@ tg.url_scheme = "http"
 #ovirt.api_url = 'https://manager.example.com:8443/api'
 #ovirt.username = 'admin@internal'
 #ovirt.password = ''
+#ovirt.storage_domain = ''
 
 [/logs]
 static_filter.on = True
