--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -17,6 +17,7 @@ setup(
                                    'init.d/beaker-provision',
                                    'init.d/beaker-watchdog']),
                   ('/etc/cron.hourly', ['cron.hourly/beaker_expire_distros']),
+                  ('/etc/sudoers.d', ['sudoers.d/beaker_proxy_clear_netboot']),
                   ('/etc/httpd/conf.d', ['apache/beaker-lab-controller.conf']),
                   ('/var/run/beaker-lab-controller', []),
                   ('/var/lib/beaker', ['addDistro/addDistro.sh']),
@@ -41,6 +42,7 @@ setup(
             'beaker-provision = bkr.labcontroller.provision:main',
             'beaker-pxemenu = bkr.labcontroller.pxemenu:main',
             'beaker-expire-distros = bkr.labcontroller.expire_distros:main',
+            'beaker-clear-netboot = bkr.labcontroller.clear_netboot:main',
         ),
     }
 )
