Update Apache config for 2.4. (while keeping 2.2 compatibility)
Change-Id: I8379117cf3ac127f3a02a3cc21916fc28ec6df42

--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -5,14 +5,28 @@ AliasMatch ^/beaker(.*)?$ "/var/www/beaker$1"
 AliasMatch ^/logs/([^/]+)/console "/var/consoles/$1"
 
 <Directory "/usr/share/bkr/lab-controller">
-    Order allow,deny
-    Allow from all
+    <IfModule mod_authz_core.c>
+        # Apache 2.4
+        Require all granted
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        # Apache 2.2
+        Order deny,allow
+        Allow from all
+    </IfModule>
 </Directory>
 
 <Directory "/var/www/beaker">
     Options Indexes FollowSymLinks
-    Order allow,deny
-    Allow from all
+    <IfModule mod_authz_core.c>
+        # Apache 2.4
+        Require all granted
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        # Apache 2.2
+        Order deny,allow
+        Allow from all
+    </IfModule>
     <Files "console.log">
         ForceType text/plain
     </Files>
