--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -39,8 +39,15 @@ WSGIScriptAlias /bkr/ /usr/share/bkr/beaker-server.wsgi/bkr/
 <Directory /usr/share/bkr>
     WSGIApplicationGroup beaker
     WSGIProcessGroup beaker
-    Order deny,allow
-    Allow from all
+    <IfModule mod_authz_core.c>
+        # Apache 2.4
+        Require all granted
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        # Apache 2.2
+        Order deny,allow
+        Allow from all
+    </IfModule>
 </Directory>
 
 
