/distribution/beaker/setup: Add dependency on yum-utils so that yum-builddep is available.
Needed for building packages when the source is a git repo.

Change-Id: Ib39b5a8956f1ebb7060d1248b6d7815b7764bcfe

--- a/Tasks/distribution/beaker/setup/Makefile
+++ b/Tasks/distribution/beaker/setup/Makefile
@@ -84,6 +84,7 @@ $(METADATA): Makefile
 	@echo "Requires:     python-setuptools-devel" >> $(METADATA)
 	@echo "Requires:     python-devel" >> $(METADATA)
 	@echo "Requires:     TurboGears" >> $(METADATA)
+	@echo "Requires:     yum-utils" >> $(METADATA)
 
 # You may need other fields here; see the documentation
 	rhts-lint $(METADATA)
