Restructure Sphinx docs
Change-Id: I1461543dfe01b3206ca642dae50e05a307c6024b

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ LabController/build
 LabController/setup.py
 IntegrationTests/build
 IntegrationTests/setup.py
+documentation/_build
 *.diff
 selenium.log
 /Tasks/distribution/beaker/dogfood/selenium-server-standalone-2.21.0.jar
