reporting queries are missing from package data
This is not a serious problem since we expect users to browse these
queries online rather than looking in /usr/lib/python* on their system.
But the test suite needs to load them.

Change-Id: Ida809f8630d31ed7c41233f65b648f206aabc0b5

--- a/Server/setup.py.in
+++ b/Server/setup.py.in
@@ -201,7 +201,7 @@ setup(
     package_data={
         'bkr.server.config': ['*.cfg'],
         'bkr.server.templates': ['*.kid'],
-        'bkr.server': ['kickstarts/*', 'snippets/*'],
+        'bkr.server': ['kickstarts/*', 'snippets/*', 'reporting-queries/*'],
     },
     keywords=[
         'turbogears.app',
