remove support for uploading logs to the server
Bug: 855703
Change-Id: I64018f8babc5f8e75c549bed4ba4501b0a6ae3d7

--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -14,8 +14,8 @@ PASSWORD = "testing"
 # Kerberos realm. If commented, last two parts of domain name are used. Example: MYDOMAIN.COM.
 #KRB_REALM = "DOMAIN.COM"
 
-# Set CACHE = True only if you define ARCHIVE_* variables correctly!
-CACHE = False
+CACHEPATH = "/tmp/beaker-tests-lc-logs"
+SERVER = "localhost"
 RENEW_SESSION_INTERVAL= 10
 LOG_MAXBYTES = 2150
 LOG_BACKUPCOUNT=5
