--- a/LabController/labcontroller.conf
+++ b/LabController/labcontroller.conf
@@ -21,12 +21,14 @@ KRB_REALM = "DOMAIN.COM"
 
 #QPID_KRB_KEYTAB='/etc/my/file.keytab'
 
-# Set CACHE = True only if you define ARCHIVE_* variables correctly!
-CACHE = False
-ARCHIVE_SERVER = "http://archive-example.domain.com/beaker"
-ARCHIVE_BASEPATH = "/var/www/html/beaker"
-ARCHIVE_RSYNC = "rsync://USER@HOST/var/www/html/beaker"
-RSYNC_FLAGS = "-ar --password-file /root/rsync-secret.txt"
+# By default, job logs are stored locally on the lab controller.
+# If you have set up an archive server to store job logs, uncomment and 
+# configure the following settings. You will also need to enable the 
+# beaker-transfer daemon to move logs to the archive server.
+#ARCHIVE_SERVER = "http://archive-example.domain.com/beaker"
+#ARCHIVE_BASEPATH = "/var/www/html/beaker"
+#ARCHIVE_RSYNC = "rsync://USER@HOST/var/www/html/beaker"
+#RSYNC_FLAGS = "-ar --password-file /root/rsync-secret.txt"
 
 # How often to renew our session on the server
 #RENEW_SESSION_INTERVAL = 300
