--- a/Client/setup.py.in
+++ b/Client/setup.py.in
@@ -1,3 +1,10 @@
+# pkg_resources.requires() does not work if multiple versions are installed in 
+# parallel. This semi-supported hack using __requires__ is the workaround.
+# http://bugs.python.org/setuptools/issue139
+# (EPEL6 has python-sphinx = 0.6 and python-sphinx10 = 1.0)
+__requires__ = ['Sphinx >= 1.0.4']
+import pkg_resources
+
 import sys
 import commands
 from glob import glob
@@ -7,8 +14,6 @@ from distutils.command.build import build as _build
 class build(_build):
     sub_commands = _build.sub_commands + [('build_sphinx', lambda self: True)]
 
-import pkg_resources
-pkg_resources.require('Sphinx >= 1.0.4')
 from sphinx.setup_command import BuildDoc
 
 class BuildDocWithPath(BuildDoc):
