HTTP API for uploading logs
Bug: 915128
Change-Id: I7261640920c693019981701a6fa83218cb526779

--- a/LabController/src/bkr/labcontroller/default.conf
+++ b/LabController/src/bkr/labcontroller/default.conf
@@ -17,6 +17,9 @@ SLEEP_TIME = 20
 # How often to renew our session on the server
 RENEW_SESSION_INTERVAL = 300
 
+# Location of locally stored job logs
+CACHEPATH = "/var/www/beaker/logs"
+
 # Location of system console logs
 CONSOLE_LOGS = "/var/consoles"
 
