move server API docs into documentation/ subdir
Change-Id: Ib12c15aca7e125db877ab7704d2109d78c34924e

--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -11,7 +11,7 @@ RewriteRule   ^/bkr$  /bkr/   [R]
 
 Alias /static /usr/share/bkr/server/static
 Alias /bkr/static /usr/share/bkr/server/static
-Alias /bkr/apidoc /usr/share/bkr/server/apidoc/html
+Redirect permanent /bkr/apidoc http://beaker-project.org/docs/server-api
 Alias /logs /var/www/beaker/logs
 Alias /rpms /var/www/beaker/rpms
 Alias /repos /var/www/beaker/repos
