--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,9 +1,11 @@
 # Makefile for Sphinx documentation
 #
 
+export PYTHONPATH=../Common:../Server:../Client/src
+
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+SPHINXBUILD   = python -c '__requires__ = ["TurboGears"]; import pkg_resources; execfile("/usr/bin/sphinx-build")'
 PAPER         =
 BUILDDIR      = _build
 
@@ -13,6 +15,15 @@ PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+
+.PHONY: build
+build: man
+
+.PHONY: install
+install: man
+	install -m0755 -d $(DESTDIR)/usr/share/man/man1
+	install -m0644 _build/man/*.1 $(DESTDIR)/usr/share/man/man1
+	ln -s bkr-distro-trees-verify.1.gz $(DESTDIR)/usr/share/man/man1/bkr-distros-verify.1.gz
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
