Require CherryPy < 3.0 rather than TurboGears
The __requires__ hack is used in several places to cope with
CherryPy 2 and 3 being installed in parallel. It turns out
using TurboGears as the dependency leads to site-packages being
inserted early on sys.path, so the wrong version of many
modules will be imported if the released bkr RPMs are installed
on a development system.

Depending on CherryPy < 3.0 explicitly rather than implicitly
through TurboGears avoids this problematic behaviour.

Change-Id: Ie6474249d6f03c4eba23095946520ce2ef9ab143

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -3,9 +3,15 @@
 
 export PYTHONPATH=../Common:../Server:../Client/src
 
+# pkg_resources.requires() does not work if multiple versions are installed in 
+# parallel, but we need to be able to load bkr for autodoc generation. The
+# semi-supported hack using __requires__ in the $SPHINXBUILD definition
+# is a workaround: http://bugs.python.org/setuptools/issue139
+# (Fedora/EPEL has python-cherrypy2 = 2.3 and python-cherrypy = 3)
+
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = python -c '__requires__ = ["TurboGears"]; import pkg_resources; execfile("/usr/bin/sphinx-build")'
+SPHINXBUILD   = python -c '__requires__ = ["CherryPy < 3.0"]; import pkg_resources; execfile("/usr/bin/sphinx-build")'
 PAPER         =
 BUILDDIR      = _build
 
