ship new release notes in beaker-server package
Change-Id: I4b0e7ed5de2ed92a411f5042a44f83ab0c2d6c3e

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -26,7 +26,7 @@ ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 .PHONY: build
-build: man
+build: man text
 
 .PHONY: install
 install: man
