--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -5,16 +5,20 @@ SHELL = /bin/bash
 export PYTHONPATH=../Common:../Server:../Client/src
 SPHINXBUILD ?= $(firstword $(shell command -v sphinx-1.0-build sphinx-build))
 
+SPHINXREQUIRES = "Sphinx >= 1.0"
 # pkg_resources.requires() does not work if multiple versions are installed in 
 # parallel, but we need to be able to load bkr for autodoc generation. The
 # semi-supported hack using __requires__ in the $SPHINXBUILD definition
 # is a workaround: http://bugs.python.org/setuptools/issue139
 # (Fedora/EPEL has python-cherrypy2 = 2.3 and python-cherrypy = 3)
 # (EPEL6 has python-sphinx = 0.6 and python-sphinx10 = 1.0)
+ifeq (0,$(shell python -c '__requires__ = ["CherryPy < 3.0"]; import pkg_resources' &>/dev/null ; echo $$?))
+    SPHINXREQUIRES += , "CherryPy < 3.0"
+endif
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD  := python -c '__requires__ = ["CherryPy < 3.0", "Sphinx >= 1.0"]; import pkg_resources; execfile("$(SPHINXBUILD)")'
+SPHINXBUILD  := python -c '__requires__ = [$(SPHINXREQUIRES)]; import pkg_resources; execfile("$(SPHINXBUILD)")'
 PAPER         =
 BUILDDIR      = _build
 
