--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -17,6 +17,7 @@ PASSWORD = "testing"
 CACHEPATH = "/tmp/beaker-tests-lc-logs"
 SERVER = "localhost"
 RENEW_SESSION_INTERVAL= 10
+SLEEP_TIME = 5
 LOG_MAXBYTES = 2150
 LOG_BACKUPCOUNT=5
 
