support for LDAP groups
Bug: 908173
Change-Id: Id55c54b1281b5621d382397299898b0dc95b818e

--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -11,7 +11,12 @@ basepath.repos = '/tmp/beaker-tests-repos'
 basepath.logs = '/tmp/beaker-tests-logs'
 basepath.harness = '/tmp/beaker-tests-harness'
 
-identity.ldap.enabled=False
+identity.ldap.enabled = True
+identity.soldapprovider.uri = 'ldap://localhost:3899/'
+identity.soldapprovider.basedn = 'dc=example,dc=invalid'
+identity.soldapprovider.autocreate = True
+identity.soldapprovider.timeout = 10
+
 autoreload.on=False
 tg.strict_parameters = True
 server.socket_port=9090
