--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -65,6 +65,7 @@ identity.ldap.enabled=False
 #identity.soldapprovider.uri="ldaps://ldap.domain.com"
 #identity.soldapprovider.basedn="dc=domain,dc=com"
 #identity.soldapprovider.autocreate=True
+#identity.soldapprovider.timeout=20
 #identity.krb_auth_principal='HTTP/HOSTNAME@EXAMPLE.COM'
 #identity.krb_auth_keytab='/etc/krb5.keytab'
 
