--- a/Server/setup.py.in
+++ b/Server/setup.py.in
@@ -209,6 +209,7 @@ setup(
             'log-delete = bkr.server.tools.log_delete:main',
             'beaker-check = bkr.server.tools.check_beaker:main',
             'beaker-cleanup-visits = bkr.server.tools.cleanup_visits:main',
+            'beaker-refresh-ldap = bkr.server.tools.refresh_ldap:main',
             'beaker-repo-update = bkr.server.tools.repo_update:main',
             'beaker-sync-tasks = bkr.server.tools.sync_tasks:main'
         ),
