don't re-create console logs after beaker-transfer has removed them
Bug: 962901
Change-Id: I14209f2edb9906382ba95e915d24fe2d97f5a0ee

--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -15,6 +15,7 @@ PASSWORD = "testing"
 #KRB_REALM = "DOMAIN.COM"
 
 CACHEPATH = "/tmp/beaker-tests-lc-logs"
+CONSOLE_LOGS = "/tmp/beaker-tests-console-logs"
 SERVER = "localhost"
 RENEW_SESSION_INTERVAL= 10
 SLEEP_TIME = 5
