tests: include ldif data files
Change-Id: Iffd8ee7f94ac977096e69f7dcaa080c0035d9b9c

--- a/IntegrationTests/setup.py.in
+++ b/IntegrationTests/setup.py.in
@@ -16,7 +16,8 @@ setup(
     packages=find_packages('src'),
     package_dir={'': 'src'},
     package_data={'': [
-       	'*.xml',
+        '*.xml',
+        '*.ldif',
         'server/kickstarts/*',
         'server/motd.xml',
         'server/selenium/*.csv',
