set threads=1 in Apache config to work around TurboGears bug
This is to work around a thread safety issue where TurboGears
intermittently raises NoApplicableMethods if you hit it while the
application is starting up in a multi-threaded server.

Bug: 796037
Change-Id: I226001f428c5a29e7ce0e1a724cd60ff276b89e9

--- a/Server/apache/beaker-server.conf
+++ b/Server/apache/beaker-server.conf
@@ -23,8 +23,11 @@ Alias /harness /var/www/beaker/harness
     </Files>
 </Directory>
 
-WSGIDaemonProcess beaker user=apache group=apache display-name=beaker maximum-requests=1000 processes=4 threads=2
-#WSGISocketPrefix run/wsgi
+# To work around a thread safety issue in TurboGears where HTTP requests will 
+# sometimes fail with NoApplicableMethods during application startup, it is 
+# recommended to set either maximum-requests=0 or threads=1 here.
+# See https://bugzilla.redhat.com/show_bug.cgi?id=796037 for details.
+WSGIDaemonProcess beaker user=apache group=apache display-name=beaker maximum-requests=1000 processes=8 threads=1
 WSGISocketPrefix /var/run/wsgi
 WSGIRestrictStdout On
 WSGIRestrictSignal Off
