Make bkr a valid namespace package
Imports __version__ from bkr.common rather than setting it directly

Bug: 957577
Change-Id: I51c0584f6a11cf474473446b0a20d5b765a3d257

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Server/build
 Server/build.out
 Server/devdata.sqlite
 Server/setup.py
-Common/bkr/__init__.py
+Common/bkr/common/__init__.py
 Common/build
 Common/setup.py
 Client/build
