--- a/Common/Makefile
+++ b/Common/Makefile
@@ -6,12 +6,12 @@ PKGNAME=beaker
 include ../rpmspec_rules.mk
 include ../py_rules.mk
 
-build:	bkr/__init__.py py-build
+build:	bkr/common/__init__.py py-build
 
-bkr/__init__.py: bkr/__init__.py.in
+bkr/common/__init__.py: bkr/common/__init__.py.in
 	sed -e 's/@VERSION@/$(PKGVERSION)/g' < $< > $@
 
 install: build py-install
 
 clean:	py-clean
-	rm bkr/__init__.py
+	rm bkr/common/__init__.py
