Added URL_SCHEME to labcontroller.conf, and s/SERVER/URL_DOMAIN/
Bug: 963700
Change-Id: I96c1c5728906bdfc9d05dd3501b4e4410b4c5834

--- a/LabController/labcontroller.conf
+++ b/LabController/labcontroller.conf
@@ -48,7 +48,12 @@ IMAGE_CACHE_MAX_ENTRIES = 20
 LOG_MAXBYTES = 10485760
 LOG_BACKUPCOUNT = 5
 
+# URL scheme used to generate absolute URLs for this lab controller.
+# It is used for job logs served by Apache. Set it to 'https' if you have
+# configured Apache for SSL and you want logs to be served over SSL.
+#URL_SCHEME = "http"
+
 # Fully qualified domain name of *this* system (not the Beaker server).
 # Defaults to socket.gethostname(). Ordinarily that is sufficient, unless you
 # have registered this lab controller with Beaker under a CNAME.
-#SERVER = "localhost.invalid"
+#URL_DOMAIN = "localhost.invalid"
