--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -16,7 +16,7 @@ PASSWORD = "testing"
 
 CACHEPATH = "/tmp/beaker-tests-lc-logs"
 CONSOLE_LOGS = "/tmp/beaker-tests-console-logs"
-SERVER = "localhost"
+URL_DOMAIN = "localhost"
 RENEW_SESSION_INTERVAL= 10
 SLEEP_TIME = 5
 LOG_MAXBYTES = 2150
