replace TG Visit/Identity framework with our own implementation using signed tokens
Change-Id: I7ecd872d21a4a5c2ee4ba17c3ce8c4ae2e5cd68b

--- a/Server/dev.cfg
+++ b/Server/dev.cfg
@@ -28,6 +28,7 @@ sqlalchemy.pool_recycle = 3600
 # sqlobject.dburi="sqlite:///drive_letter:/path/to/file"
 
 # Authentication
+visit.token_secret_key = 'not really a secret'
 identity.ldap.enabled=False
 #identity.soldapprovider.uri="ldaps://ldap.domain.com"
 #identity.soldapprovider.basedn="dc=domain,dc=com"
