--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -55,11 +55,14 @@ beaker_email='root@localhost.localdomain'
 # a flood of commands overwhelming your lab controller.
 #beaker.max_running_commands = 10
 
-##
-## Authentication
-##
-# default to 6 hours
-visit.timeout=360
+# Timeout for authentication tokens. After this many minutes of inactivity 
+# users will be required to re-authenticate.
+#visit.timeout=360
+
+# Secret key for encrypting authentication tokens. Set this to a very long 
+# random string and DO NOT disclose it. Changing this value will invalidate all 
+# existing tokens and force users to re-authenticate.
+#visit.token_secret_key = ''
 
 identity.ldap.enabled=False
 #identity.soldapprovider.uri="ldaps://ldap.domain.com"
