--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -11,6 +11,7 @@ basepath.repos = '/tmp/beaker-tests-repos'
 basepath.logs = '/tmp/beaker-tests-logs'
 basepath.harness = '/tmp/beaker-tests-harness'
 
+visit.token_secret_key = 'testkey'
 identity.ldap.enabled = True
 identity.soldapprovider.uri = 'ldap://localhost:3899/'
 identity.soldapprovider.basedn = 'dc=example,dc=invalid'
