--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -52,103 +52,14 @@ tg.scheduler = False
 # Set session or cookie
 # session_filter.on = True
 
-# VISIT TRACKING
-# Each visit to your application will be assigned a unique visit ID tracked via
-# a cookie sent to the visitor's browser.
-# --------------
-
-# Enable Visit tracking
-visit.on=True
-
-# Number of minutes a visit may be idle before it expires.
-visit.timeout=120
-
-# The name of the cookie to transmit to the visitor's browser.
-# visit.cookie.name="tg-visit"
-
-# Domain name to specify when setting the cookie (must begin with . according to
-# RFC 2109). The default (None) should work for most cases and will default to
-# the machine to which the request was made. NOTE: localhost is NEVER a valid
-# value and will NOT WORK.
-# visit.cookie.domain=None
-
-# Specific path for the cookie
-# visit.cookie.path="/"
-
-# The name of the VisitManager plugin to use for visitor tracking.
-visit.manager="sqlalchemy"
-
-# Database class to use for visit tracking
-visit.saprovider.model = "bkr.server.model.Visit"
-identity.saprovider.model.visit = "bkr.server.model.VisitIdentity"
-
-# IDENTITY
-# General configuration of the TurboGears Identity management module
-# --------
-
-# Switch to turn on or off the Identity management module
-identity.on=True
-
-# [REQUIRED] URL to which CherryPy will internally redirect when an access
-# control check fails. If Identity management is turned on, a value for this
-# option must be specified.
-#identity.failure_url="/login"
-# This is configured in bkr/server/controllers.py instead
-
-# if force_external_redirect is set to True, then the identity
-# framework will use an external redirection.
-# This is mainly used to make sure that if you use
-# an https:// url in the failure_url this will be respected
-identity.force_external_redirect=True
-
-# The names of the fields on the login form containing the visitor's user ID
-# and password. In addition, the submit button is specified simply so its
-# existence may be stripped out prior to passing the form data to the target
-# controller.
-# identity.form.user_name="user_name"
-# identity.form.password="password"
-# identity.form.submit="login"
-
-# What sources should the identity provider consider when determining the
-# identity associated with a request? Comma separated list of identity sources.
-# Valid sources: form, visit, http_auth
-# identity.source="form,http_auth,visit"
-
-#Because we have custom code in our identity code,
-#Beaker must now use the ldapsa identity provider
-identity.provider="bkr.server.identity.LdapSqlAlchemyIdentityProvider"
-
-# SqlAlchemyIdentityProvider
-# Configuration options for the default IdentityProvider
-# -------------------------
-
-# The classes you wish to use for your Identity model. Remember to not use reserved
-# SQL keywords for class names (at least unless you specify a different table
-# name using sqlmeta).
-identity.saprovider.model.user="bkr.server.model.User"
-identity.saprovider.model.group="bkr.server.model.Group"
-identity.saprovider.model.permission="bkr.server.model.Permission"
-
+# TurboGears visit and identity frameworks are no longer used. Beaker has its 
+# own implementation instead.
+visit.on=False
+identity.on=False
+# In our implementation this config option is still used to control token timeouts.
+visit.timeout=360
 
 sqlalchemy.convert_unicode=True
-# The password encryption algorithm used when comparing passwords against what's
-# stored in the database. Valid values are 'md5' or 'sha1'. If you do not
-# specify an encryption algorithm, passwords are expected to be clear text.
-# The SqlAlchemyProvider *will* encrypt passwords supplied as part of your login
-# form.  If you set the password through the password property, like:
-# my_user.password = 'secret'
-# the password will be encrypted in the database, provided identity is up and
-# running, or you have loaded the configuration specifying what encryption to
-# use (in situations where identity may not yet be running, like tests).
-
-identity.saprovider.encryption_algorithm='sha1'
-
-# We don't need the Visit or VisitIdentity extensions to create their tables on 
-# startup, it only causes problems:
-# https://bugzilla.redhat.com/show_bug.cgi?id=852557
-# Note that these config options are not honoured by stock TurboGears.
-visit.create_model = False
-identity.create_model = False
 
 mail.message.encoding = 'utf-8'
 mail.utf8qp.on = True
