wrap CherryPy in a Flask app
This patch also switches to use gunicorn instead of the built-in
CherryPy server for dev and tests.

Change-Id: I444ddbde2e26a0ff56da62ffac58c7ce7014262c

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -64,7 +64,9 @@ sqlalchemy.convert_unicode=True
 mail.message.encoding = 'utf-8'
 mail.utf8qp.on = True
 
-autoreload.package="bkr.server"
+# CherryPy's autoreload mechanism is not compatible with other WSGI containers.
+#autoreload.package="bkr.server"
+autoreload.on = False
 
 # compress the data sends to the web browser
 # [/]
