log to syslog instead of writing log files directly
This simplifies our config a lot, and lets us avoid the expensive
locking (and tricky bugs) from ConcurrentLogHandler.

Also removed SIGHUP handling in beakerd, since it is not needed.

Bug: 963542
Change-Id: I68c6e82d93b647bbb4ca405aa52ae8217d016730

--- a/LabController/setup.py.in
+++ b/LabController/setup.py.in
@@ -19,6 +19,8 @@ setup(
                   ('/etc/cron.hourly', ['cron.hourly/beaker_expire_distros']),
                   ('/etc/sudoers.d', ['sudoers.d/beaker_proxy_clear_netboot']),
                   ('/etc/httpd/conf.d', ['apache/beaker-lab-controller.conf']),
+                  ('/etc/rsyslog.d', ['rsyslog.d/beaker-lab-controller.conf']),
+                  # /etc/logrotate.d/beaker is in Server but applies to LCs too
                   ('/var/run/beaker-lab-controller', []),
                   ('/var/lib/beaker', ['addDistro/addDistro.sh']),
                   ('/var/lib/beaker/addDistro.d', glob('addDistro/addDistro.d/*')),
