--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -183,3 +183,8 @@ static_filter.dir = "%(package_dir)s/static"
 [/favicon.ico]
 static_filter.on = True
 static_filter.file = "%(package_dir)s/static/images/favicon.ico"
+
+# Ensure a logging section is present, to suppress TG's backwards compatible 
+# "old-style" logging. But we don't actually configure any logging stuff 
+# through TG so this section should always be empty.
+[logging]
