--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -100,9 +100,6 @@ server.environment="development"
 # to the TurboGears instance here
 server.webpath="/bkr/"
 
-server.log_file = "/var/log/beaker/server.log"
-server.log_to_screen = False
-
 autoreload.on = False
 tg.strict_parameters = True
 
@@ -205,58 +202,6 @@ static_filter.dir = "/usr/share/bkr/server/static"
 static_filter.on = True
 static_filter.file = "/usr/share/bkr/server/static/images/favicon.ico"
 
-# LOGGING
-# Logging configuration generally follows the style of the standard
-# Python logging module configuration. Note that when specifying
-# log format messages, you need to use *() for formatting variables.
-# Deployment independent log configuration is in beaker/server/config/log.cfg
-[logging]
-
-[[handlers]]
-
-[[[beakerd_out]]]
-class='ConcurrentRotatingFileHandler'
-args="('/var/log/beaker/beakerd.log', 'a+', 10*(1024**2), 5)"
-formatter='full_content'
-
-[[[debug_out]]]
-class='ConcurrentRotatingFileHandler'
-level='DEBUG'
-args="('/var/log/beaker/server-debug.log', 'a+', 10*(1024**2), 5)"
-formatter='full_content'
-
-[[[error_out]]]
-class='ConcurrentRotatingFileHandler'
-level='WARN'
-args="('/var/log/beaker/server-errors.log', 'a+', 10*(1024**2), 5)"
-formatter='full_content'
-
-# If you prefer to handle access logging in the application instead of Apache,
-# uncomment this handler and enable it for the [[[access]]] logger below.
-#[[[access_out]]]
-#class='ConcurrentRotatingFileHandler'
-#args="('/var/log/beaker/server.log', 'a', 10*(1024**2), 5)"
-#formatter='message_only'
-
-[[loggers]]
-
-[[[default]]]
-level='INFO'
-handlers=['debug_out', 'error_out']
-
-[[[bkr.server]]]
-level='DEBUG'
-qualname='bkr.server'
-
-[[[beakerd]]]
-level='DEBUG'
-qualname='beakerd'
-propagate=False
-handlers=['beakerd_out']
-
-[[[access]]]
-level='INFO'
-qualname='turbogears.access'
-propagate=False
-handlers=[]
-#handlers=['access_out']
+# Beaker logs to syslog.
+# To adjust destination log filenames, edit the syslog config.
+# To adjust rotation settings, edit the logrotate config.
