bootstrap-ify master template
Change-Id: I62a60b435d0f7acaa6f4eb410e440819c2e9102b

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Server/build
 Server/build.out
 Server/devdata.sqlite
 Server/setup.py
+Server/bkr/server/static/.webassets-cache/
+Server/bkr/server/static/webassets-external/
 Common/bkr/common/__init__.py
 Common/build
 Common/setup.py
